test/compile_error/invalidrange.conf.6.def
config invalid_range_conf {
    foo : real[-100.34~-100.35];
}
